minted support added

--- a/preamble/common.tex
+++ b/preamble/common.tex
@@ -18,6 +18,7 @@
 %% Пакеты для листингов
 \input{preamble/common/lst}
 % \input{preamble/common/lst-listings}
+% \input{preamble/common/lst-minted}
 
 
 %%% Local Variables:
