--- a/preamble/common/hyperref.tex
+++ b/preamble/common/hyperref.tex
@@ -3,6 +3,8 @@
  colorlinks=false}
 \hypersetup{pdfborder=0 0 0}
 
+\usepackage{breakurl}
+
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8-unix
