--- a/preamble/common.tex
+++ b/preamble/common.tex
@@ -12,13 +12,14 @@
 \input{preamble/common/table}
 %% Работа с графикой
 \input{preamble/common/graphics}
-% \input{preamble/common/pstrics}
+%\input{preamble/common/pstrics}
 %% Пакеты для библиографии
-\input{preamble/common/bib}
+%\input{preamble/common/bibtex/bibunits}
+\input{preamble/common/bibtex/common}
 %% Пакеты для листингов
 \input{preamble/common/lst}
-% \input{preamble/common/lst-listings}
-% \input{preamble/common/lst-minted}
+%\input{preamble/common/lst-listings}
+%\input{preamble/common/lst-minted}
 
 
 %%% Local Variables:
