--- a/preamble/common.tex
+++ b/preamble/common.tex
@@ -17,9 +17,10 @@
 %\input{preamble/common/bibtex/bibunits}
 \input{preamble/common/bibtex/common}
 %% Пакеты для листингов
-\input{preamble/common/lst}
-%\input{preamble/common/lst-listings}
-%\input{preamble/common/lst-minted}
+\input{preamble/common/lst/common}
+%\input{preamble/common/lst/listings}
+%\input{preamble/common/lst/minted}
+%\input{preamble/common/lst/texments}
 
 
 %%% Local Variables:
