--- a/preamble/common/hyperref.tex
+++ b/preamble/common/hyperref.tex
@@ -3,7 +3,9 @@
  colorlinks=false}
 \hypersetup{pdfborder=0 0 0}
 
-\usepackage{breakurl}
+\ifthenelse{\boolean{xetex}}{}{%
+  \usepackage{breakurl}
+}
 
 %%% Local Variables:
 %%% mode: latex
