--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,23 @@
 
 \usepackage{ifthenx}
 
+% Check tex4ht
+\provideboolean{texht}
+\newif\iftexht\texhtfalse
+\makeatletter
+\@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
+\@ifpackageloaded{tex4xt}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
+\makeatother
+
+% Check revtex
+\provideboolean{revtex}
+\makeatletter
+\@ifclassloaded{revtex4-1}{\setboolean{revtex}{true}}{\setboolean{revtex}{false}}
+\ifthenelse{\boolean{revtex}}{}{%
+    \@ifclassloaded{revtex4}{\setboolean{revtex}{true}}{\setboolean{revtex}{false}}
+}
+\makeatother
+         
 \ifthenelse{\boolean{luatex}}
     {\input preamble/lualatex}
 %else
