--- a/preamble/common.tex
+++ b/preamble/common.tex
@@ -15,7 +15,8 @@
 %\input{preamble/common/pstrics}
 %% Пакеты для библиографии
 %\input{preamble/common/bibtex/bibunits}
-\input{preamble/common/bibtex/common}
+%\input{preamble/common/bibtex/common}
+\input{preamble/common/biblatex}
 %% Пакеты для листингов
 \input{preamble/common/lst/common}
 %\input{preamble/common/lst/listings}
