--- a/preamble.tex
+++ b/preamble.tex
@@ -12,7 +12,7 @@
 \IfFileExists{ifxetex.sty}{\usepackage{ifxetex}}{}
 \IfFileExists{ifluatex.sty}{\usepackage{ifluatex}}{}
 
-\usepackage{ifthenx}
+\usepackage{xifthen}
 
 % Check tex4ht
 \provideboolean{texht}
