--- a/preamble/class/beamer.tex
+++ b/preamble/class/beamer.tex
@@ -15,6 +15,7 @@ aspectratio=169,
 ]{beamer}
 
 \input{preamble/class/beamer/common}
+\input{preamble/class/beamer/caption}
 \input{preamble/class/beamer/themes}
 
 \ifx\pstmode\undefined
