--- a/preamble/class/beamer/themes.tex
+++ b/preamble/class/beamer/themes.tex
@@ -20,3 +20,10 @@
 
 % Убираем навигационные символы
 % \setbeamertemplate{navigation symbols}{}
+
+% Версия для печати
+\ifdefined\printable
+  \usecolortheme{dove}
+  \setbeamertemplate{navigation symbols}{}
+\fi
+
