--- a/preamble/common/biblatex/main.tex
+++ b/preamble/common/biblatex/main.tex
@@ -1,15 +1,15 @@
 %% biblatex
 
 \usepackage[%
-parentracker=true,
-backend=biber,
-hyperref=auto,
-language=auto,
-babel=other,
-citestyle=gost-numeric,
-defernumbers=true,
-bibstyle=gost-footnote,
-style=gost-numeric,
+parentracker=true,%
+backend=biber,%
+hyperref=auto,%
+language=auto,%
+autolang=other,%
+citestyle=gost-numeric,%
+defernumbers=true,%
+bibstyle=gost-footnote,%
+style=gost-numeric,%
 % disable printing the URLs and ISBNs in the bibliography
 %url=false,
 %isbn=false
@@ -21,6 +21,19 @@ style=gost-numeric,
 % document body and in the bibliography, respectively
 %maxcitenames=3,
 %maxbibnames=100,
+% A threshold affecting all lists of names
+%maxnames=10,%
+%minnames=1,%
+% This option automatically starts a new reference section at a document division such
+% as a chapter or a section
+%refsection=chapter,%
+% Similar to the refsection option but starts a new reference segment
+%refsegment=chapter,
+% This option automatically executes the \citereset command at a 
+% document division such as a chapter or a section.
+%citereset=chapter,%
+% Global cite counter
+%citecounter=false,%
 ]{biblatex}
 
 %%% Local Variables:
