sorting in biblatex

--- a/preamble/common/biblatex/main.tex
+++ b/preamble/common/biblatex/main.tex
@@ -34,6 +34,8 @@ style=gost-numeric,%
 %citereset=chapter,%
 % Global cite counter
 %citecounter=false,%
+% sorting=nty,nyt,nyvt,anyt,anyvt,ynt,ydnt,none
+%sorting=nty,
 ]{biblatex}
 
 %%% Local Variables:
