--- a/preamble/common/bibtex/bibunits.tex
+++ b/preamble/common/bibtex/bibunits.tex
@@ -3,7 +3,7 @@
 \usepackage{bibunits}
 \bibliographyunit[\title]
 
-\bibliographystyle*{gost2008l}%
+\bibliographystyle*{gost2008}%
 
 %%% Local Variables:
 %%% mode: latex
