--- a/preamble/common/bibtex/common.tex
+++ b/preamble/common/bibtex/common.tex
@@ -10,7 +10,7 @@
 
 % \usepackage{gost7184}
 % \bibliographystyle{gost7184u}
-\bibliographystyle{gost2008l}
+\bibliographystyle{gost2008}
 
 %%% Local Variables:
 %%% mode: latex
