--- a/preamble/pkg.tex
+++ b/preamble/pkg.tex
@@ -10,7 +10,7 @@
 \input{preamble/pkg/math}
 %% Таблицы
 \input{preamble/pkg/table/misc}
-%\input{preamble/common/table/pgf}
+%\input{preamble/pkg/table/pgf}
 %% Работа с графикой
 \input{preamble/pkg/graphics}
 %\input{preamble/pkg/pstrics}
