--- a/preamble.tex
+++ b/preamble.tex
@@ -19,7 +19,7 @@
 \newif\iftexht\texhtfalse
 \makeatletter
 \@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
-\@ifpackageloaded{tex4xt}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
+\@ifpackageloaded{tex4ht}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
 \makeatother
 
 % Check revtex
