paratype pt font added

--- a/preamble/font/fontspec.tex
+++ b/preamble/font/fontspec.tex
@@ -15,6 +15,9 @@
 %% Microsoft Times + Helvetica + Courier
 % \input{preamble/font/fontspec/ms-times}
 
+%% ParaType font collection for languages of Russia
+% \input{preamble/font/fontspec/paratype-pt}
+
 %% The TeX Gyre (TG) Collection of Fonts
 % \input{preamble/font/fontspec/tex-gyre}
 
