--- a/makefiles/preamble/font/fontspec/libertine.tex
+++ b/makefiles/preamble/font/fontspec/libertine.tex
@@ -2,13 +2,13 @@
 %% url: http://linuxlibertine.sourceforge.net/
 %% gentoo: emerge media-fonts/libertine-ttf
 
-\newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{Linux Libertine}
-\newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{Linux Biolinum}
-\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase]{Inconsolata}
+\newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{Linux Libertine O}
+\newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{Linux Biolinum O}
+\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase]{Linux Libertine Mono O}
 
-\setromanfont[Ligatures=TeX]{Linux Libertine}
-\setsansfont[Ligatures=TeX,Scale=MatchLowercase]{Linux Biolinum}
-\setmonofont[Scale=MatchLowercase]{Inconsolata}
+\setromanfont[Ligatures=TeX]{Linux Libertine O}
+\setsansfont[Ligatures=TeX,Scale=MatchLowercase]{Linux Biolinum O}
+\setmonofont[Scale=MatchLowercase]{Linux Libertine Mono O}
 
 %%% Local Variables:
 %%% mode: latex
