--- a/makefiles/preamble.tex
+++ b/makefiles/preamble.tex
@@ -15,12 +15,12 @@
 \usepackage{xifthen}
 
 % Check tex4ht
-\provideboolean{texht}
-\newif\iftexht\texhtfalse
-\makeatletter
-\@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
-\@ifpackageloaded{tex4ht}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
-\makeatother
+%\provideboolean{texht}
+%\newif\iftexht\texhtfalse
+%\makeatletter
+%\@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
+%\@ifpackageloaded{tex4xt}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
+%\makeatother
 
 % Check revtex
 \provideboolean{revtex}
