Файлы для постера

--- a/makefiles/preamble/class/beamer.tex
+++ b/makefiles/preamble/class/beamer.tex
@@ -44,6 +44,9 @@ handout,
     \input{preamble/class/beamer/handoutwithnotes}
 \else\fi
 
+\ifdefined\poster
+    \input{preamble/class/beamer/beamerposter}
+\else\fi
 
 %%% Local Variables:
 %%% mode: latex
