fix libertine fontspec

--- a/makefiles/preamble/font/fontspec/libertine.tex
+++ b/makefiles/preamble/font/fontspec/libertine.tex
@@ -1,6 +1,6 @@
 %% OpenType fonts from the Linux Libertine Open Fonts Project
 %% url: http://linuxlibertine.sourceforge.net/
-%% gentoo: emerge media-fonts/libertine-ttf
+%% gentoo: emerge media-fonts/libertine
 
 \newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{Linux Libertine O}
 \newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{Linux Biolinum O}
