appendix in beamer

--- a/makefiles/preamble/class/beamer/common.tex
+++ b/makefiles/preamble/class/beamer/common.tex
@@ -10,6 +10,9 @@
 % Поддержка русского языка
 \uselanguage{Russian}
 
+% Appendix support
+\usepackage{appendixnumberbeamer}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "../default"
