Fontspec fix in beamer-metropolis

--- a/makefiles/preamble/class/beamer/themes/metropolis.tex
+++ b/makefiles/preamble/class/beamer/themes/metropolis.tex
@@ -43,7 +43,7 @@
 %\useinnertheme{rounded}
 
 % serif structurebold structureitalicserif structuresmallcapsserif
-%\usefonttheme{professionalfonts}
+\usefonttheme{professionalfonts}
 
 % Убираем навигационные символы
 % \setbeamertemplate{navigation symbols}{}
@@ -68,3 +68,6 @@
 %\tableofcontents[currentsection]
 %\note{\tableofcontents[currentsection]}
 %\end{frame}}
+
+% Fixes
+\input{preamble/class/beamer/themes/metropolis/fix/fontspec}
