fix for metropolis beamer theme

--- a/makefiles/preamble/class/beamer/themes/metropolis/fix/fontspec.tex
+++ b/makefiles/preamble/class/beamer/themes/metropolis/fix/fontspec.tex
@@ -1,5 +1,10 @@
 %% Fixes fo Fontspec
 
+\newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase,%
+                 ItalicFont={Fira Sans Light Italic},%
+                 BoldFont={Fira Sans},%
+                 BoldItalicFont={Fira Sans Italic}]%
+                 {Fira Sans Light}%
 \newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase,%
                  ItalicFont={Fira Sans Light Italic},%
                  BoldFont={Fira Sans},%
