--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -10,6 +10,7 @@
 \input{preamble/pkg/math}
 %% Таблицы
 \input{preamble/pkg/table/misc}
+%\input{preamble/pkg/table/mdw}
 %\input{preamble/pkg/table/pgf}
 %% Работа с графикой
 \input{preamble/pkg/graphics}
