--- a/makefiles/preamble/pkg/lst/listings.tex
+++ b/makefiles/preamble/pkg/lst/listings.tex
@@ -7,7 +7,9 @@
 %    numbers=left, 
 %    numberstyle=\tiny,
 %    upquote=false,
-    basicstyle=\ttfamily,%
+    keepspaces=true,
+    columns=flexible,
+    basicstyle=\footnotesize\ttfamily,%
     breaklines=true,%
     breakatwhitespace=true,%
     postbreak=\space,%
