--- a/makefiles/preamble/pkg/hyperref.tex
+++ b/makefiles/preamble/pkg/hyperref.tex
@@ -3,6 +3,9 @@
  colorlinks=false}
 \hypersetup{pdfborder=0 0 0}
 
+% http://tex.stackexchange.com/questions/24445/hyperref-lualatex-and-unicode-bookmarks-issue-garbled-page-numbers-in-ar-for-l
+\hypersetup{pdfencoding=auto}
+
 \ifthenelse{\boolean{xetex}}{}{%
   \usepackage{breakurl}
 }
