--- a/makefiles/preamble/pkg/math.tex
+++ b/makefiles/preamble/pkg/math.tex
@@ -12,6 +12,10 @@ mathic=true,
 
 \allowdisplaybreaks
 
+
+% Calligraphic fonts for physicists
+\usepackage{mathrsfs}
+
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8-unix
