beamer caption separator

--- a/makefiles/preamble/class/beamer/caption.tex
+++ b/makefiles/preamble/class/beamer/caption.tex
@@ -4,7 +4,7 @@
 \setbeamertemplate{caption}[numbered]
 
 \setbeamerfont{caption}{size=\footnotesize}
-\setbeamertemplate{caption label separator}{.}
+\setbeamertemplate{caption label separator}{.~}
 
 %%% Local Variables: 
 %%% mode: latex
