--- a/makefiles/preamble/font/fontspec/paratype-pt.tex
+++ b/makefiles/preamble/font/fontspec/paratype-pt.tex
@@ -3,12 +3,16 @@
 %% gentoo: emerge media-fonts/paratype
 
 \newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{PT Serif}
-\newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{PT Sans}
-\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase]{PT Mono}
+% \newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{PT Sans}
+\newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX]{PT Sans}
+% \newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase]{PT Mono}
+\newfontfamily\cyrillicfonttt[Script=Cyrillic]{PT Mono}
 
 \setromanfont[Ligatures=TeX]{PT Serif}
-\setsansfont[Ligatures=TeX,Scale=MatchLowercase]{PT Sans}
-\setmonofont[Scale=MatchLowercase]{PT Mono}
+% \setsansfont[Ligatures=TeX,Scale=MatchLowercase]{PT Sans}
+\setsansfont[Ligatures=TeX]{PT Sans}
+% \setmonofont[Scale=MatchLowercase]{PT Mono}
+\setmonofont{PT Mono}
 
 %%% Local Variables:
 %%% mode: latex
