--- a/makefiles/preamble/class/beamer/themes/metropolis.tex
+++ b/makefiles/preamble/class/beamer/themes/metropolis.tex
@@ -52,6 +52,8 @@
 \ifdefined\printable
 \usecolortheme{dove}
 \setbeamertemplate{navigation symbols}{}
+\metroset{sectionpage=none}
+\metroset{subsectionpage=none}
 \fi
 
 
