--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -4,6 +4,8 @@
 
 %% Исправления
 \input{preamble/pkg/fix}
+%% Типографика
+\input{preamble/pkg/typography}
 %% Пакеты для гипертекста
 \input{preamble/pkg/hyperref}
 %% Расширенная математика
