--- a/makefiles/preamble/pkg/typography.tex
+++ b/makefiles/preamble/pkg/typography.tex
@@ -1,7 +1,6 @@
 % Do not to leave widows and orphans
 \usepackage[all]{nowidow}
 
-
 \usepackage[%
 % prevent hyphenation of words on more than two consecutive lines
 hyphenation, %
@@ -21,6 +20,10 @@ nosingleletter, %
 homeoarchy, %
 \fi 
 ]{impnattypo}
+
+% Use microtype
+\usepackage{microtype}
+\UseMicrotypeSet[protrusion]{alltext}
 
 %%% Local Variables:
 %%% mode: latex
