--- a/makefiles/preamble/pkg/fix.tex
+++ b/makefiles/preamble/pkg/fix.tex
@@ -1,10 +1,15 @@
 %% Разные исправления
 
+% Not needed for after 2015 TeX
+\usepackage{silence} 
+\WarningFilter{fixltx2e}{}
 \usepackage{fixltx2e}
+
 % control hyphenation of compound words and ordinary words dashed by em-dash
 \usepackage[shortcuts]{extdash}
 
 \usepackage{setspace}
+
 % Настройка сносок
 \usepackage[perpage,bottom,multiple,stable]{footmisc}
 
