add help target to make

--- a/makefiles/preamble/pkg/biblatex/main.tex
+++ b/makefiles/preamble/pkg/biblatex/main.tex
@@ -5,7 +5,7 @@ parentracker=true,%
 backend=biber,%
 hyperref=auto,%
 language=auto,%
-autolang=other,%
+autolang=other*,%
 citestyle=gost-numeric,%
 defernumbers=true,%
 bibstyle=gost-footnote,%
