--- a/makefiles/preamble/pkg/biblatex/main.tex
+++ b/makefiles/preamble/pkg/biblatex/main.tex
@@ -38,6 +38,17 @@ style=gost-numeric,%
 %sorting=nty,
 ]{biblatex}
 
+%\ExecuteBibliographyOptions{%
+%maxnames=10,%
+%maxcitenames=10,%
+%maxbibnames=10,%
+%movenames=true,%
+%url=false,%
+%sorting=ynt,%
+%refsection=chapter,%
+%}
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8-unix
