fix typo in fontspec

--- a/makefiles/preamble/font/fontspec/cm-unicode.tex
+++ b/makefiles/preamble/font/fontspec/cm-unicode.tex
@@ -27,7 +27,7 @@ BoldItalicFont = cmunso,%
 ]
 
 % CMU Typewriter Text
-\newfontfamily\cyrillicfontsf{cmuntt}%
+\newfontfamily\cyrillicfonttt{cmuntt}%
 [Script=Cyrillic,Scale=MatchLowercase,%
 Extension = .otf,%
 ItalicFont = cmunit,%
