--- a/makefiles/preamble/pkg/lst/minted.tex
+++ b/makefiles/preamble/pkg/lst/minted.tex
@@ -53,6 +53,9 @@
     \usemintedstyle{bw}
 \fi
 
+% Переносить строки
+\setminted{breaklines=true}
+
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8-unix
