find символьные ссылки

--- a/makefiles/preamble/pkg/table/pgf.tex
+++ b/makefiles/preamble/pkg/table/pgf.tex
@@ -3,7 +3,7 @@
 % recommended:
 \usepackage{booktabs}
 \usepackage{array}
-\usepackage{colortbl}
+% \usepackage{colortbl}
 
 %%% Local Variables:
 %%% mode: latex
