--- a/makefiles/preamble/pkg/graphics.tex
+++ b/makefiles/preamble/pkg/graphics.tex
@@ -14,6 +14,8 @@
 %% Обработка текста в eps-файлах
 \usepackage[scanall]{psfrag}
 
+\usepackage{rotating}
+
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8-unix
