--- a/makefiles/preamble-pst.tex
+++ b/makefiles/preamble-pst.tex
@@ -2,7 +2,11 @@
 
 \def\pstmode{}
 
-\input preamble
+\documentclass{standalone}
+
+\input{preamble/include/main}
+
+\input{preamble/pkg/pstrics}
 
 %%% Local Variables: 
 %%% mode: latex
