--- a/makefiles/preamble/latex.tex
+++ b/makefiles/preamble/latex.tex
@@ -1,8 +1,10 @@
 %%%
 
-\usepackage{cmap}
+\ifpdf
+    \usepackage{cmap}
+\fi
 \usepackage{textcomp}
-\usepackage{mathtext}
+% \usepackage{mathtext}
 
 
 \usepackage[T1,T2A]{fontenc}
