fix misc for biblatex

--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -23,6 +23,7 @@
 \input{preamble/pkg/bibtex/common}
 %\input{preamble/pkg/bibtex/bibunits}
 %\input{preamble/pkg/biblatex/main}
+%\input{preamble/pkg/biblatex/fixmisc}
 %% Пакеты для листингов
 \input{preamble/pkg/lst/common}
 %\input{preamble/pkg/lst/listings}
