fix fontspec for msfonts

--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -26,6 +26,7 @@
 %}}}
 %{{{ BibLaTeX
 %\input{preamble/pkg/biblatex/style/gost}
+%\input{preamble/pkg/biblatex/style/ieee}
 %\input{preamble/pkg/biblatex/fixmisc}
 %}}}
 %% Пакеты для листингов
