--- a/makefiles/preamble/font/fontspec.tex
+++ b/makefiles/preamble/font/fontspec.tex
@@ -15,8 +15,11 @@
 %% Microsoft Times + Helvetica + Courier
 % \input{preamble/font/fontspec/ms-times}
 
-%% ParaType font collection for languages of Russia
+%% ParaType PT font collection for languages of Russia
 % \input{preamble/font/fontspec/paratype-pt}
+
+%% ParaType PT Astra font collection for languages of Russia
+% \input{preamble/font/fontspec/paratype-pt-astra}
 
 %% The TeX Gyre (TG) Collection of Fonts
 % \input{preamble/font/fontspec/tex-gyre}
