--- a/makefiles/preamble/font/fontspec/cm-unicode.tex
+++ b/makefiles/preamble/font/fontspec/cm-unicode.tex
@@ -2,6 +2,10 @@
 %% url: http://canopus.iacp.dvo.ru/~panov/cm-unicode/
 %% gentoo: emerge media-fonts/cm-unicode-otf
 
+\setmainfont[Ligatures=TeX,Scale=MatchLowercase]{CMU Serif}
+\setsansfont[Ligatures=TeX,Scale=MatchLowercase]{CMU Sans Serif}
+\setmonofont[Scale=MatchLowercase]{CMU Typewriter Text}
+
 % CMU Serif
 \newfontfamily\cyrillicfont{cmunrm}%
 [Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase,%
@@ -27,7 +31,7 @@ BoldItalicFont = cmunso,%
 ]
 
 % CMU Typewriter Text
-\newfontfamily\cyrillicfonttt{cmuntt}%
+\newfontfamily\cyrillicfontsf{cmuntt}%
 [Script=Cyrillic,Scale=MatchLowercase,%
 Extension = .otf,%
 ItalicFont = cmunit,%
@@ -38,9 +42,6 @@ BoldItalicFont = cmuntx,%
 % SmallCapsFont = ,
 ]
 
-\setmainfont[Ligatures=TeX,Scale=MatchLowercase]{CMU Serif}
-\setsansfont[Ligatures=TeX,Scale=MatchLowercase]{CMU Sans Serif}
-\setmonofont[Scale=MatchLowercase]{CMU Typewriter Text}
 
 %%% Local Variables:
 %%% mode: latex
