--- a/makefiles/preamble/font/fontspec/ms-times.tex
+++ b/makefiles/preamble/font/fontspec/ms-times.tex
@@ -51,9 +51,13 @@
 \setsansfont[Ligatures=TeX,Scale=MatchLowercase]{Arial}
 \setmonofont[Scale=MatchLowercase,Scale=0.9]{Courier New}
 
-\newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{Times New Roman}
-\newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{Arial}
-\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase,Scale=0.9]{Courier New}
+% \newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{Times New Roman}
+% \newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{Arial}
+% \newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase,Scale=0.9]{Courier New}
+
+\newfontfamily\cyrillicfont[Ligatures=TeX]{Times New Roman}
+\newfontfamily\cyrillicfontsf[Ligatures=TeX,Scale=MatchLowercase]{Arial}
+\newfontfamily\cyrillicfonttt[Scale=MatchLowercase,Scale=0.9]{Courier New}
 
 % }
 
