--- a/makefiles/preamble/lualatex.tex
+++ b/makefiles/preamble/lualatex.tex
@@ -23,7 +23,7 @@
 \setotherlanguages{english}
 
 \usepackage{fontspec}
-\defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
+\defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
 
 \input{preamble/fix/xelatex}
 
