--- a/makefiles/preamble/font/fontspec/cm-unicode.tex
+++ b/makefiles/preamble/font/fontspec/cm-unicode.tex
@@ -7,41 +7,19 @@
 \setmonofont[Scale=MatchLowercase]{CMU Typewriter Text}
 
 % CMU Serif
-\newfontfamily\cyrillicfont{cmunrm}%
-[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase,%
-Extension = .otf,%
-ItalicFont = cmunti,%
-BoldFont = cmunbx,%
-BoldItalicFont = cmunbi,%
-SlantedFont = cmunsl,%
-BoldSlantedFont = cmunbl,%
-% SmallCapsFont = 
-]
+\newfontfamily\cyrillicfont%
+[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]%
+{CMU Serif}
 
 % CMU Sans Serif
-\newfontfamily\cyrillicfontsf{cmunss}%
-[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase,%
-Extension = .otf,%
-ItalicFont = cmunsi,%
-BoldFont = cmunsx,%
-BoldItalicFont = cmunso,%
-% SlantedFont = ,
-% BoldSlantedFont = ,
-% SmallCapsFont = ,
-]
+\newfontfamily\cyrillicfontsf%
+[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]%
+{CMU Sans Serif}
 
 % CMU Typewriter Text
-\newfontfamily\cyrillicfontsf{cmuntt}%
-[Script=Cyrillic,Scale=MatchLowercase,%
-Extension = .otf,%
-ItalicFont = cmunit,%
-BoldFont = cmuntb,%
-BoldItalicFont = cmuntx,%
-% SlantedFont = ,
-% BoldSlantedFont = ,
-% SmallCapsFont = ,
-]
-
+\newfontfamily\cyrillicfonttt%
+[Script=Cyrillic,Scale=MatchLowercase]%
+{CMU Typewriter Text}
 
 %%% Local Variables:
 %%% mode: latex
