--- a/makefiles/preamble/lualatex.tex
+++ b/makefiles/preamble/lualatex.tex
@@ -1,5 +1,8 @@
 %%%
 
+%% This package provides emulation of pdfTeX primitives for LuaTeX v0.85+
+\RequirePackage{luatex85}
+
 % \usepackage{mathtext}
 
 % Dirty hack. We need amssymb befor xunicode
@@ -27,8 +30,8 @@
 
 \input{preamble/fix/xelatex}
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../default"
 %%% coding: utf-8-unix
-%%% End: 
+%%% End:
