lualatex files tuning

--- a/makefiles/preamble/class.tex
+++ b/makefiles/preamble/class.tex
@@ -1,6 +1,9 @@
 % \RequirePackage{fixltx2e}
 \RequirePackage{fix-cm}
 
+%% Temporary hack for LaTeX2e <2019-10-01>
+\PassOptionsToPackage{force}{filehook}
+
 \documentclass[%
 a4paper, %
 intlimits, %
