--- a/makefiles/preamble/pkg/biblatex/style/phys.tex
+++ b/makefiles/preamble/pkg/biblatex/style/phys.tex
@@ -9,8 +9,7 @@ autolang=other*,%
 %citestyle=,%
 defernumbers=true,%
 %bibstyle=gost-footnote,%
-style=nature,%
-%style=phys,%
+style=phys,%
 % disable printing the URLs and ISBNs in the bibliography
 url=false,
 isbn=false,
@@ -41,8 +40,10 @@ minnames=1,%
 %sorting=nty,
 % Article titles are not always included in the bibliography
 articletitle=true,%
-% Whether the title of books is printed for inbook and incollection entries
-intitle=true,%
+articletitle=true,%
+biblabel=brackets,%
+chaptertitle=true,%
+pageranges=true,%
 ]{biblatex}
 
 %\ExecuteBibliographyOptions{%
