--- a/makefiles/preamble/font/fontspec/paratype-pt.tex
+++ b/makefiles/preamble/font/fontspec/paratype-pt.tex
@@ -9,7 +9,7 @@
 
 \newfontfamily\cyrillicfont[Script=Cyrillic,Ligatures=TeX]{PT Serif}
 \newfontfamily\cyrillicfontsf[Script=Cyrillic,Ligatures=TeX,Scale=MatchLowercase]{PT Sans}
-\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase]{PT Mono}
+\newfontfamily\cyrillicfonttt[Script=Cyrillic,Scale=MatchLowercase,Scale=0.9]{PT Mono}
 
 %%% Local Variables:
 %%% mode: latex
