fix for revtex4-2

--- a/makefiles/preamble/pkg/bibtex/common.tex
+++ b/makefiles/preamble/pkg/bibtex/common.tex
@@ -2,10 +2,10 @@
 
 \makeatletter
 \@ifclassloaded{revtex4-1}{\relax}{%
-    \@ifclassloaded{beamer}{\relax}{%
+  \@ifclassloaded{revtex4-2}{\relax}{%
+  \@ifclassloaded{beamer}{\relax}{%
     \usepackage{cite}%
-    }
-}
+}}}
 \makeatother
 
 % \usepackage{gost7184}
