Fix ieee biblatex

--- a/makefiles/preamble/pkg/biblatex/style/ieee.tex
+++ b/makefiles/preamble/pkg/biblatex/style/ieee.tex
@@ -5,13 +5,11 @@ parentracker=true,%
 backend=biber,%
 hyperref=auto,%
 language=auto,%
-autolang=other*,%
-%citestyle=,%
+%autolang=other*,%
+%citestyle=numeric-comp,%
 defernumbers=true,%
-%bibstyle=gost-footnote,%
 style=ieee,%
 dashed=false,%
-%style=phys,%
 % disable printing the URLs and ISBNs in the bibliography
 %url=false,
 %isbn=false,
