Поддержка размеров рисунков в презентациях

--- a/makefiles/preamble/font/fontspec/paratype-pt-astra.tex
+++ b/makefiles/preamble/font/fontspec/paratype-pt-astra.tex
@@ -1,5 +1,6 @@
 %% ParaType PT Astra font collection for languages of Russia
 %% url: https://www.paratype.ru/cinfo/news.asp?NewsId=3469
+%% url: https://en.wikipedia.org/wiki/PT_Fonts
 %% gentoo: emerge media-fonts/paratype-astra
 
 \setromanfont[Ligatures=TeX]{PT Astra Serif}
