--- a/makefiles/preamble/font/fontspec/paratype-pt.tex
+++ b/makefiles/preamble/font/fontspec/paratype-pt.tex
@@ -1,6 +1,7 @@
 %% ParaType PT font collection for languages of Russia
 %% url: http://www.paratype.com/public
 %% url: https://company.paratype.com/pt-sans-pt-serif
+%% url: https://en.wikipedia.org/wiki/PT_Fonts
 %% gentoo: emerge media-fonts/paratype
 
 \setromanfont[Ligatures=TeX]{PT Serif}
