--- a/makefiles/preamble/class/beamer.tex
+++ b/makefiles/preamble/class/beamer.tex
@@ -27,6 +27,7 @@ handout,
 
 %}}}
 
+\input{preamble/class/beamer/fix}
 \input{preamble/class/beamer/common}
 \input{preamble/class/beamer/caption}
 \input{preamble/class/beamer/themes}
@@ -50,6 +51,5 @@ handout,
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../default"
 %%% coding: utf-8-unix
 %%% End:
