Added libertinus font

--- a/makefiles/preamble/font/fontspec.tex
+++ b/makefiles/preamble/font/fontspec.tex
@@ -12,6 +12,9 @@
 %% OpenType fonts from the Linux Libertine Open Fonts Project
 % \input{preamble/font/fontspec/libertine}
 
+%% The font family Libertinus is derived from the Linux Libertine and enhanced with a math font
+% \input{preamble/font/fontspec/libertinus}
+
 %% Microsoft Times + Helvetica + Courier
 % \input{preamble/font/fontspec/ms-times}
 
