Removed feature Ligatures=TeX

--- a/makefiles/preamble/lualatex.tex
+++ b/makefiles/preamble/lualatex.tex
@@ -23,7 +23,7 @@
 %{{{ Fonts
 
 \usepackage{fontspec}
-\defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
+\defaultfontfeatures{Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
 \input{preamble/font/fontspec}
 
 % Math fonts
