--- a/makefiles/preamble/xelatex.tex
+++ b/makefiles/preamble/xelatex.tex
@@ -26,7 +26,7 @@
 \setotherlanguages{english}
 
 \usepackage{fontspec}
-\defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
+\defaultfontfeatures{Scale=MatchLowercase} % устанавливает поведение шрифтов по умолчанию
 
 \input{preamble/fix/xelatex}
 
