Added: amsmath loading befor all

--- a/makefiles/preamble/lualatex.tex
+++ b/makefiles/preamble/lualatex.tex
@@ -4,7 +4,7 @@
 \RequirePackage{luatex85}
 
 %% Dirty hack. We need amssymb befor xunicode
-% \usepackage{amssymb}
+\usepackage{amssymb}
 
 \usepackage{polyglossia}
 
