fix: cleanups biblatex-phys config

--- a/makefiles/preamble/pkg/biblatex/style/phys.tex
+++ b/makefiles/preamble/pkg/biblatex/style/phys.tex
@@ -10,9 +10,9 @@ autolang=other*,%
 defernumbers=true,%
 %bibstyle=gost-footnote,%
 style=phys,%
-% disable printing the URLs and ISBNs in the bibliography
-url=false,
-isbn=false,
+%% disable printing the URLs and ISBNs in the bibliography
+% url=false,
+% isbn=false,
 doi=true,
 eprint=true,
 % enables/disables generation of the back references to the citation,
@@ -38,8 +38,7 @@ minnames=1,%
 %citecounter=false,%
 % sorting=nty,nyt,nyvt,anyt,anyvt,ynt,ydnt,none
 %sorting=nty,
-% Article titles are not always included in the bibliography
-articletitle=true,%
+%% Article titles are not always included in the bibliography
 articletitle=true,%
 biblabel=brackets,%
 chaptertitle=true,%
