--- a/makefiles/preamble/font/fontspec.tex
+++ b/makefiles/preamble/font/fontspec.tex
@@ -21,6 +21,11 @@
 %% ParaType PT font collection for languages of Russia
 % \input{preamble/font/fontspec/paratype-pt}
 
+%% ParaType PT font collection for languages of Russia + Noto Sans Mono
+% For listings with extra characters
+
+\input{preamble/font/fontspec/paratype-pt+noto}
+
 %% ParaType PT Astra font collection for languages of Russia
 % \input{preamble/font/fontspec/paratype-pt-astra}
 
