feat: add fefault options for polyglossia russia

--- a/makefiles/preamble/pkg/polyglossia/default/russian.tex
+++ b/makefiles/preamble/pkg/polyglossia/default/russian.tex
@@ -1,5 +1,6 @@
 \setdefaultlanguage[spelling=modern]{russian}
-%\setkeys{russian}{babelshorthands=true}
+\setkeys{russian}{babelshorthands=true}
+\setkeys{russian}{indentfirst=true}
 
 %%% Local Variables:
 %%% mode: latex
