fix(fonts): fix default font

--- a/makefiles/preamble/font/fontspec.tex
+++ b/makefiles/preamble/font/fontspec.tex
@@ -22,9 +22,8 @@
 % \input{preamble/font/fontspec/paratype-pt}
 
 %% ParaType PT font collection for languages of Russia + Noto Sans Mono
-% For listings with extra characters
-
-\input{preamble/font/fontspec/paratype-pt+noto}
+%% For listings with extra characters
+% \input{preamble/font/fontspec/paratype-pt+noto}
 
 %% ParaType PT Astra font collection for languages of Russia
 % \input{preamble/font/fontspec/paratype-pt-astra}
