fix(biblatex): fix gost-biblatex for polyglossia from 2022

--- a/makefiles/preamble/pkg/biblatex/style/gost.tex
+++ b/makefiles/preamble/pkg/biblatex/style/gost.tex
@@ -5,7 +5,9 @@ parentracker=true,%
 backend=biber,%
 hyperref=auto,%
 language=auto,%
-autolang=other*,%
+%autolang=other*,%
+%autolang=langname,%
+langhook=extras,%
 citestyle=gost-numeric,%
 defernumbers=true,%
 bibstyle=gost-footnote,%
@@ -29,7 +31,7 @@ style=gost-numeric,%
 %refsection=chapter,%
 % Similar to the refsection option but starts a new reference segment
 %refsegment=chapter,
-% This option automatically executes the \citereset command at a 
+% This option automatically executes the \citereset command at a
 % document division such as a chapter or a section.
 %citereset=chapter,%
 % Global cite counter
