fix(preamble): activate numeric-comp option for ieee biblatex style

--- a/makefiles/preamble/pkg/biblatex/style/ieee.tex
+++ b/makefiles/preamble/pkg/biblatex/style/ieee.tex
@@ -6,10 +6,10 @@ backend=biber,%
 hyperref=auto,%
 language=auto,%
 %autolang=other*,%
-%citestyle=numeric-comp,%
 defernumbers=true,%
 style=ieee,%
 dashed=false,%
+citestyle=numeric-comp,%
 % disable printing the URLs and ISBNs in the bibliography
 %url=false,
 %isbn=false,
