--- a/makefiles/preamble/pkg/polyglossia/default/russian.tex
+++ b/makefiles/preamble/pkg/polyglossia/default/russian.tex
@@ -1,6 +1,5 @@
 \setdefaultlanguage[spelling=modern]{russian}
-\setkeys{russian}{babelshorthands=true}
-\setkeys{russian}{indentfirst=true}
+%\setkeys{russian}{babelshorthands=true}
 
 %%% Local Variables:
 %%% mode: latex
