feat(preamble): add upright package for listings

--- a/makefiles/preamble/pkg/lst/common.tex
+++ b/makefiles/preamble/pkg/lst/common.tex
@@ -2,8 +2,12 @@
 
 %% Расширеное окружение verbatim
 \usepackage{fancyvrb}
+
 %% Раскраска текста
 \usepackage{color}
+
+%% upright-quote and grave-accent glyphs in verbatim
+\usepackage{upquote}
 
 %%% Local Variables:
 %%% mode: latex
